--- a/src/app/components/cart-app.component.html
+++ b/src/app/components/cart-app.component.html
@@ -1,34 +1,46 @@
-
 <app-navbar [items]="items" (openEventEmiter)="openCar()"></app-navbar>
 
 <div class="container my-4">
+  <h2>Catalogo de Productos APP!</h2>
+  <div class="row">
+    <app-catalogo
+      [productos]="products"
+      (productEventEmiter)="onAddCar($event)"
+    >
+    </app-catalogo>
 
-    <h2>Catalogo de Productos APP!</h2>
-    <div class="row">
-        
-        <div [className]=" showCarro? 'col-8' : 'col' ">
-            <app-catalogo [productos]="products" (productEventEmiter)="onAddCar($event)"></app-catalogo>
+    @if(showCarro){
+
+    <div class="abrir-modal animacion fadeIn">
+      <div class="modal" style="display: block" tabindex="-1">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="modal-title">Carro de Compras!</div>
+            </div>
+            <div class="modal-body">
+              @if (items.length > 0) {
+              <app-carro
+                [items]="items"
+                [total]="totalPrice"
+                (idProductEventEmiter)="onDeleteProduct($event)">
+            </app-carro>
+              }@else {
+              <div class="alert alert-warning">
+                No hay productos en el carro!
+              </div>
+              }
+              <button
+                class="btn btn-secondary btn-sm float-end"
+                (click)="openCar()"
+              >
+                Cerrar Carro
+              </button>
+            </div>
+          </div>
         </div>
-
-        @if(showCarro){
-            
-            <div class="col-4 ">
-                <button class="btn btn-secondary btn-sm float-end" (click)="openCar()">
-                    Cerrar Carro
-                </button>
-
-                @if (items.length > 0) {
-                    <app-carro [items]="items" 
-                    [total]="totalPrice"
-                    (idProductEventEmiter)="onDeleteProduct($event)"></app-carro>
-                }@else {
-                    <div class="alert alert-warning">No hay productos en el carro!</div>
-                }
-            </div>      
-        }
+      </div>
     </div>
+    }
+  </div>
 </div>
-
-
-
-
