desarrollo se agrega modal para el carro

--- a/src/app/components/cart-app.component.html
+++ b/src/app/components/cart-app.component.html
@@ -10,37 +10,11 @@
     </app-catalogo>
 
     @if(showCarro){
-
-    <div class="abrir-modal animacion fadeIn">
-      <div class="modal" style="display: block" tabindex="-1">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <div class="modal-title">Carro de Compras!</div>
-            </div>
-            <div class="modal-body">
-              @if (items.length > 0) {
-              <app-carro
-                [items]="items"
-                [total]="totalPrice"
-                (idProductEventEmiter)="onDeleteProduct($event)">
-            </app-carro>
-              }@else {
-              <div class="alert alert-warning">
-                No hay productos en el carro!
-              </div>
-              }
-              <button
-                class="btn btn-secondary btn-sm float-end"
-                (click)="openCar()"
-              >
-                Cerrar Carro
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-carro-modal
+      [itemsModal]="items"
+      (idProductEventEmiter)="onDeleteProduct($event)"
+      (openEventEmiter)="openCar()"
+    ></app-carro-modal>
     }
   </div>
 </div>
